--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/592d889fce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- titulo de Pagina -->
     <title>Viajes Chile</title>
-  </head>
+  </head> 
+  
   <body>
 
     <!-- Barra de Navegacion-->
 
       <header class="header">
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-transparent">
-          <div class="container-fluid me-auto">
+        <nav class="navbar row navbar-expand-lg fixed-top navbar-dark bg-transparent">
+          <div class="container-fluid me-auto col-10">
             <img src="assets/img/viajes.svg" alt="" width="50">
-            <a class="navbar-brand me-auto" href="#">Viajes Chile</a>
+            <a class="navbar-brand ms-3" href="#">Viajes Chile</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -66,26 +69,39 @@
           </button>
         </div>
       </section>
+      <!--Espacio-->
+      <div class="col-xs-12 bg-dark" style="height:50px;"></div>
 
       <!-- Seccion Quienes Somos-->
 
-      <div class="container text-light bg-dark">
-        <div class="row justify-content-md-center">
-          <div class="col col-lg-2 lh-lg">
-            ¿Quienes Somos?
-          </div>
+      <div class="container-fluid text-light bg-dark d-none d-md-block">
+        <div class="row justify-content-md-center ">
+          <div class="col-sm-3 col-md-4 fw-light col-lg-3 ">
+            <h3 class="fw-light"> ¿Quienes Somos? </h3>            
+          </div>         
         </div>
-        <div class="row">          
-          <div class="col-md-4 lh-lg">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor maxime voluptatem labore! Ullam tempora, ad iure vero magni facilis quam. Consectetur nesciunt, earum doloribus explicabo aut sapiente odio! Corrupti, aspernatur.
+
+        <hr>
+
+        <div class="row row-cols-md-2">          
+          <div class="col-md-4 ">
+            <div class="col-md-12 text-center">
+              <i class="fas fa-plane"></i>
+            </div>            
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum repellendus unde, ea nemo aut est ipsum consequuntur delectus laboriosam error dolores reprehenderit at sint eligendi corporis expedita suscipit incidunt ipsa. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae nobis accusantium illo ipsum porro tempora ratione perspiciatis harum. Earum at a accusamus excepturi explicabo esse debitis aut consequatur suscipit recusandae!</p>
           </div>
-          <div class="col-md-4 lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste eveniet soluta possimus perferendis beatae reprehenderit earum placeat ducimus temporibus sint suscipit, fugit ipsa praesentium nam laborum? Dolorum, beatae sit?
+          <div class="col-md-4 ">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum commodi eaque rem reiciendis exercitationem eligendi, minima odit, saepe sunt laborum voluptates vel voluptate doloremque laboriosam consectetur autem distinctio earum ducimus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa inventore mollitia tempora id harum ipsum labore natus, necessitatibus ducimus quasi quam fugit quod nostrum doloremque ad. </p>
+            <div class="col-md-12  text-center">
+              <i class="fas fa-mountain"></i>
+            </div>
           </div>
-          <div class="col-md-4 lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus vero eos rem ratione molestias quaerat? Sunt nam laborum obcaecati natus repellat! A qui nulla iste amet nam quibusdam, laudantium architecto!
-          </div>
-          
+          <div class="col-md-4 ">
+            <div class="col-md-12  text-center">
+              <i class="fas fa-route"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit minus illum reiciendis velit dignissimos quidem mollitia enim dolore eum consectetur quae nostrum, iste animi incidunt, distinctio suscipit aspernatur quia reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam officia esse eum quibusdam corrupti, nemo dolorum error perferendis? Culpa ad dolor nostrum ducimus quidem eveniet. Fugit provident porro dicta neque!</p>
+          </div>          
         </div>
       </div>
 
