--- a/index.html
+++ b/index.html
@@ -162,7 +162,46 @@
           </main>
         </section>
       </section>
-    
+    <!--Espacio-->
+
+      <div class="col-md-12 bg-dark" style="height: 50px;"></div>
+
+    <!--Sección Formulario-->
+      <section class="container-fluid text-light bg-dark">
+        <div class="row justify-content-md-center">
+          <div class="col-md-3 col-md-4 fw-light col-lg-3">
+            <h3 id="contact" class="fw-light text-center"> Contacto </h3>            
+          </div>         
+        </div>
+
+      <hr class="line">
+      <section class="container-fluid px-4 bg-dark">
+        <form class="row g-3">
+          <div class="col-sm-12 col-md-6">
+            <input type="text" class="form-control" placeholder="Nombres" aria-label="Nombres">
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <input type="text" class="form-control" placeholder="Apellidos" aria-label="Apellidos">
+          </div>
+
+          <div class="col-sm-12 col-md-6">
+            <input type="email" class="form-control" id="inputEmail4" placeholder="email">
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <input type="text" class="form-control" placeholder="Teléfono">
+          </div>
+          <div class="col-md-4">
+            <select id="inputState" class="form-select">
+              <option selected>Lugares de Chile</option>
+              <option value="1">Norte</option>
+              <option value="2">Centro La Cam</option>
+              <option value="3">Sur</option>
+              <option value="4">Isla de Pascua</option>
+            </select>
+          </div>
+        </form>
+      </section> 
+   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
