--- a/index.html
+++ b/index.html
@@ -201,7 +201,29 @@
           </div>
         </form>
       </section> 
-   
+    <!--Espacio-->
+
+      <div class="col-md-12 bg-dark" style="height: 50px;"></div>
+
+    <!--Footer-->
+    
+      <footer class="bgfoot container-fluid">        
+        <div class="row">
+          <div class="col-md-4 offset-md-2 text-white align-self-center">
+            <p class="h4 fw-normal text-center text-md-start">VIAJES CHILE</p>
+          </div>
+          <div class="col-md-4 fs-2 text-center text-md-end">
+            <a href="http://github.com"><i class="fab fa-github-square px-1 text-white"></i></a>
+  
+            <a href="http://linkedin.com"><i class="fab fa-linkedin px-1 text-white"></i></a>
+  
+            <a href="http://twitter.com"><i class="fab fa-twitter-square px-1 text-white"></i></a>
+  
+            <a href="http://facebook.com"><i class="fab fa-facebook-square px-1 text-white"></i></a>
+          </div>
+        </div>        
+      </footer>
+    <!--fin de las secciones-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
